Nice helper is added

--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -7,8 +7,14 @@
   <div class="detail owner">
     <span>Owner:</span> {{rental.owner}}
   </div>
+  <div>
+    <span>Type:</span> {{rental-property-type rental.propertyType}}
+      - {{rental.propertyType}}
+  </div>
+
   <div class="detail type">
-    <span>Type:</span> {{rental.propertyType}}
+    <span>Type:</span> {{rental-property-type rental.propertyType}}
+      - {{rental.propertyType}}
   </div>
   <div class="detail location">
     <span>Location:</span> {{rental.city}}
