--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -22,4 +22,5 @@
   <div class="detail bedrooms">
     <span>Number of bedrooms:</span> {{rental.bedrooms}}
   </div>
+  {{location-map location=rental.city}}
 </article>
